# Micro-Expert-Router-SSD-Streamed-MoE-MER

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  metadata.json  package-lock.json
configs/: g2-standard-32-l4.toml
deploy/grafana/: dashboard.json
deploy/helm/mer/: Chart.yaml  values.yaml
deploy/helm/mer/templates/: all.yaml
docs/: audit-findings.md  distributed.md  production.md
docs/benchmarks/: mixtral-8x7b-cpu-cache-scaling-2026-06-25.md  mixtral-8x7b-cpu-cache-scaling-2026-06-27.md  qwen3-coder-30b-a3b-cpu-production-sprint-2026-06-30.blocked.json  qwen3-coder-30b-a3b-cpu-production-sprint-2026-06-30.md
rust-engine/: Cargo.toml
rust-engine/.cargo/: config.toml
rust-engine/cuda/: glibc_cuda_compat.h
rust-engine/proto/: route_experts.proto
rust-engine/src/: aligned_buffer.rs  architecture.rs  batch_scheduler.rs  block_pool.rs  buffer_pool.rs  config.rs  dense_tensor.rs  dequant.rs  distributed.rs  draft.rs  engine.rs  expert_cache.rs  gating.rs  gguf.rs  gguf_loader.rs  grpc.rs  grpc_gen.rs  inference.rs  io_provider.rs  io_reactor.rs  io_uring_storage.rs  lib.rs  main.rs  metrics.rs  middleware.rs  mla.rs  model.rs  multi_layer_cache.rs  numa.rs  packed_storage.rs  parallel.rs  prefetch_governor.rs  pregate.rs  residency.rs  router.rs  rpc.rs  sampling.rs  server.rs  session.rs  stage_timing.rs  (+5 more)
rust-engine/src/backend/: mod.rs
rust-engine/src/backend/wgpu_shaders/: attention.wgsl  matmul.wgsl  matmul_q4_0.wgsl  softmax.wgsl  swiglu.wgsl
rust-engine/src/kernels/: amx.rs  avx2.rs  avx512.rs  cpuinfo.rs  mod.rs  scalar.rs
rust-engine/tests/: concurrency_stress.rs
scripts/: bench_turbo10.sh  compute_expert_aliases.py  compute_transition_matrix.py  extract_mixtral_experts.py  gen_striped_data.sh  quickstart.sh  setup_cuda_env.sh  test_extract_fp8.py  wrk_completion.lua
src/: App.tsx  index.css
