[package]
name = "micro-expert-router"
version = "0.1.0"
edition = "2021"
description = "MoE execution engine that streams experts from NVMe into RAM with O_DIRECT, an LRU expert cache, and a learned predictive prefetcher"
# This crate is intentionally not published to crates.io. The `license`
# field has been removed, and without it `cargo publish` would refuse to
# upload the crate anyway; setting `publish = false` makes that intent
# explicit and prevents accidental publish attempts from CI or `cargo
# release` workflows.
publish = false

[dependencies]
# Tokio drives the orchestration (scheduling, prefetch tasks, channels).
# We use `block_in_place` from `rt-multi-thread` to dispatch blocking
# `pread(2)` syscalls without satisfying `'static` lifetimes.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }

# Fixed-capacity LRU cache for resident experts.
lru = "0.12"

# Serialisation: TOML config file + JSON request/response bodies.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP server for the OpenAI-compatible API. Pin minor versions; both are
# 0.x and follow strict semver, so a wildcard would break us.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# HuggingFace tokenizer. Optional via `tokenizer` feature so users without
# the model files can still build / test.
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }

# Prometheus metrics export.
prometheus = { version = "0.13", default-features = false }

# Sync primitive for the LRU + buffer pool. parking_lot is faster and not async,
# which is exactly what we want around a short critical section.
parking_lot = "0.12"

# CLI and structured logging.
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Mocked router needs a weighted distribution.
rand = "0.8"

# O_DIRECT, posix_memalign, fadvise.
libc = "0.2"

# Histogram for percentile latency reporting.
hdrhistogram = "7.5"

# Lock-free concurrent hash map for the per-request KV-cache session
# store (Phase 9). Using `dashmap` instead of `parking_lot::RwLock<HashMap>`
# keeps the steady-state path lock-free for reads, which matters when
# many concurrent HTTP requests share the same store.
dashmap = "5.5"

# Safetensors loader for HuggingFace dense weights. Auto-detected by
# `RealModel::from_dir` and used in preference to per-tensor `.bin`
# files when present.
safetensors = "0.4"

# Optional BLAS-equivalent dense matmul backend. Pulled in only when
# the `blas` cargo feature is enabled. We use `matrixmultiply` rather
# than `cblas-sys` + `blas-src` because it:
#   * is pure Rust — no `system OpenBLAS` install required, so CI and
#     `cargo test` keep working out of the box;
#   * provides the same hand-tuned-microkernel SGEMM/SGEMV used by
#     `ndarray` for its `dot` op (the canonical BLAS-shaped path in the
#     Rust ecosystem);
#   * lets a follow-up PR drop in `cblas-sys` behind the same feature
#     gate without touching call sites in `transformer.rs`.
matrixmultiply = { version = "0.3", optional = true }

# fp16 (half-precision) weight support for SSD-streamed experts. Halving the
# bytes-per-parameter halves every SSD read, which is the single highest-
# leverage energy reduction in this engine.
half = { version = "2", features = ["bytemuck"] }

# io_uring with registered fixed buffers (Linux-only, behind `io_uring`
# cargo feature). The default build does not require this crate.
io-uring = { version = "0.6", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[features]
default = []
# Real HuggingFace tokenizer support. Off by default because the
# `tokenizers` crate pulls in `onig` (C library) which slows the build
# noticeably; the engine exposes a byte-level fallback tokenizer when
# this feature is disabled.
tokenizer = ["dep:tokenizers"]
# Linux-only io_uring backend with registered fixed buffers. Off by default
# because it requires the `io-uring` crate and only builds on Linux.
io_uring = ["dep:io-uring"]
# Row-parallel matmul (uses `std::thread::scope`, no extra crate dep) for
# the dense projections inside `TransformerLayer` and the LM head. This
# stands in for a future rayon / candle / cudarc backend —
# the call sites are already routed through `matmul_row_major`, so a
# future PR can swap the body for a CUDA kernel without touching callers.
simd = []

# BLAS-equivalent dense matmul. When enabled, `matmul_row_major` routes
# through `matrixmultiply`'s tuned SGEMV microkernel instead of the
# scalar / `simd` row-parallel loop. Mutually exclusive with `simd`
# (a static `compile_error!` enforces this in `transformer.rs` so a
# misconfigured `--features simd,blas` build fails fast rather than
# silently picking one branch).
blas = ["dep:matrixmultiply"]
