[package]
name = "micro-expert-router"
version = "0.1.0"
edition = "2021"
description = "MoE execution engine that streams experts from NVMe into RAM with O_DIRECT, an LRU expert cache, and a learned predictive prefetcher"
# This crate is intentionally not published to crates.io. The `license`
# field has been removed, and without it `cargo publish` would refuse to
# upload the crate anyway; setting `publish = false` makes that intent
# explicit and prevents accidental publish attempts from CI or `cargo
# release` workflows.
publish = false

[dependencies]
# Tokio drives the orchestration (scheduling, prefetch tasks, channels).
# We use `block_in_place` from `rt-multi-thread` to dispatch blocking
# `pread(2)` syscalls without satisfying `'static` lifetimes.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "io-util"] }

# Fixed-capacity LRU cache for resident experts.
lru = "0.12"

# Serialisation: TOML config file + JSON request/response bodies.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP server for the OpenAI-compatible API. Pin minor versions; both are
# 0.x and follow strict semver, so a wildcard would break us.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# HuggingFace tokenizer. Optional via `tokenizer` feature so users without
# the model files can still build / test.
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }

# Prometheus metrics export.
prometheus = { version = "0.13", default-features = false }

# Sync primitive for the LRU + buffer pool. parking_lot is faster and not async,
# which is exactly what we want around a short critical section.
parking_lot = "0.12"

# Lock-free, RCU-style atomic Arc swap. Used for the live-reloadable
# runtime configuration so Tokio worker threads can read sampling
# parameters / max-tokens caps on the hot token-evaluation path with
# zero lock contention — `ArcSwap::load()` is a single relaxed atomic
# load. See `crate::config::RuntimeConfig`.
arc-swap = "1.7"

# CLI and structured logging.
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Mocked router needs a weighted distribution.
rand = "0.8"

# O_DIRECT, posix_memalign, fadvise.
libc = "0.2"

# Histogram for percentile latency reporting.
hdrhistogram = "7.5"

# Lock-free concurrent hash map for the per-request KV-cache session
# store (Phase 9). Using `dashmap` instead of `parking_lot::RwLock<HashMap>`
# keeps the steady-state path lock-free for reads, which matters when
# many concurrent HTTP requests share the same store.
dashmap = "5.5"

# Safetensors loader for HuggingFace dense weights. Auto-detected by
# `RealModel::from_dir` and used in preference to per-tensor `.bin`
# files when present.
safetensors = "0.4"

# Optional BLAS-equivalent dense matmul backend. Pulled in only when
# the `blas` cargo feature is enabled. We use `matrixmultiply` rather
# than `cblas-sys` + `blas-src` because it:
#   * is pure Rust — no `system OpenBLAS` install required, so CI and
#     `cargo test` keep working out of the box;
#   * provides the same hand-tuned-microkernel SGEMM/SGEMV used by
#     `ndarray` for its `dot` op (the canonical BLAS-shaped path in the
#     Rust ecosystem);
#   * lets a follow-up PR drop in `cblas-sys` behind the same feature
#     gate without touching call sites in `transformer.rs`.
matrixmultiply = { version = "0.3", optional = true }

# fp16 (half-precision) weight support for SSD-streamed experts. Halving the
# bytes-per-parameter halves every SSD read, which is the single highest-
# leverage energy reduction in this engine.
half = { version = "2", features = ["bytemuck"] }

# io_uring with registered fixed buffers (Linux-only, behind `io_uring`
# cargo feature). The default build does not require this crate.
io-uring = { version = "0.6", optional = true }

# Hugging Face Candle tensor library — used as the industrial-grade math
# backend for the per-expert SwiGLU forward pass. We pull in only the
# core crate (no `candle-nn`, no GPU backends): the expert weights still
# arrive page-aligned out of NVMe via our O_DIRECT pipeline and are
# bridged into `Tensor`s in `inference.rs`. `default-features = false`
# keeps the dependency lean (CPU only, no Accelerate / MKL / CUDA).
candle-core = { version = "0.10", default-features = false }

# Native terminal dashboard — Phase 4 of the three-tier hierarchy. The
# `mer-cli monitor` subcommand uses these to render a live, polling
# overview of the SSD → RAM → VRAM hit grid, hit rates, VRAM
# utilisation, and I/O reactor pulse. Behind the `tui` cargo feature
# (on by default; turn off via `--no-default-features` for embedded
# builds).
ratatui = { version = "0.28", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[features]
default = ["tui"]
# Real HuggingFace tokenizer support. Off by default because the
# `tokenizers` crate pulls in `onig` (C library) which slows the build
# noticeably; the engine exposes a byte-level fallback tokenizer when
# this feature is disabled.
tokenizer = ["dep:tokenizers"]
# Linux-only io_uring backend with registered fixed buffers. Off by default
# because it requires the `io-uring` crate and only builds on Linux.
io_uring = ["dep:io-uring"]
# Row-parallel matmul. **Deprecated / no-op as of gist Task 1
# ("Hardware-Agnostic Auto-Escalation"):** the runtime row-parallel
# dispatch in `matmul_row_major` / `gate_up_swiglu` / `down_proj` is
# now always compiled, so a single binary auto-escalates on any host
# with enough cores. The feature is retained as a no-op for backwards
# compatibility with downstream build scripts that still pass
# `--features simd`; new builds should omit it.
simd = []

# BLAS-equivalent dense matmul. When enabled, `matmul_row_major` routes
# through `matrixmultiply`'s tuned SGEMV microkernel instead of the
# always-compiled runtime row-parallel loop. Useful on hosts where the
# `matrixmultiply` microkernel's ASM beats the auto-escalation path —
# typically large `d_model × d_ff` Mixtral-class workloads on AVX2 /
# NEON. Off by default; the auto-escalation path is good enough for
# the common case and adds no extra crate dependency.
blas = ["dep:matrixmultiply"]
# Build the AVX-512 dispatcher in `kernels/avx512.rs`. Stable on
# x86_64; the actual code is `#[target_feature]`-gated and only
# executed when the runtime probe in `kernels::detect()` confirms the
# CPU supports AVX-512F + AVX-512BW. Off by default to keep portable
# builds buildable on toolchains pinned to a non-AVX-512 baseline.
avx512 = []
# Build the AMX skeleton in `kernels/amx.rs`. AMX intrinsics are
# nightly-only as of Rust 1.84, so this feature today builds in the
# runtime detector + tile-hint plumbing but the executor still falls
# through to AVX-512 / scalar. A follow-up PR (or a nightly build)
# can drop a real tile-based body in without touching call sites.
amx = []
# **Budget-GPU offload** (gist Part 2, fix #5). Opt-in build flag that
# enables the `GpuBackend` integration path in `backend/mod.rs`. The
# default CPU build (no feature) keeps the binary lean; turning this
# on prepares the runtime for a follow-up PR that wires in a real
# `wgpu` compute dispatcher for the dense transformer body. The
# config-level toggle is `[real_transformer].compute_offload =
# "gpu"`. Off by default to keep CPU-only builds buildable on
# toolchains and hosts without a GPU driver.
gpu = []
# CUDA compute plane (Phase 3, three-tier hierarchy). When enabled,
# `inference::run_inference_gpu` performs the per-expert SwiGLU forward
# through candle-core's CUDA backend; the engine still falls back
# gracefully to the CPU path at runtime when no device is present.
# Pulls in `candle-core/cuda` and therefore requires a working CUDA
# toolkit on the build host — off by default to keep the standard
# CPU-only build buildable.
cuda = ["candle-core/cuda"]
# Native terminal dashboard (Phase 4). Enables the `mer-cli monitor`
# subcommand backed by ratatui + crossterm. On by default because the
# extra deps are pure-Rust and small; can be turned off with
# `--no-default-features` for the minimal embedded build.
tui = ["dep:ratatui", "dep:crossterm"]
