[package]
name = "micro-expert-router"
version = "0.1.0"
edition = "2021"
description = "MoE execution engine that streams experts from NVMe into RAM with O_DIRECT, an LRU expert cache, and a learned predictive prefetcher"
# This crate is intentionally not published to crates.io. The `license`
# field has been removed, and without it `cargo publish` would refuse to
# upload the crate anyway; setting `publish = false` makes that intent
# explicit and prevents accidental publish attempts from CI or `cargo
# release` workflows.
publish = false

[dependencies]
# Tokio drives the orchestration (scheduling, prefetch tasks, channels).
# We use `block_in_place` from `rt-multi-thread` to dispatch blocking
# `pread(2)` syscalls without satisfying `'static` lifetimes.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "io-util"] }

# Fixed-capacity LRU cache for resident experts.
lru = "0.12"

# Serialisation: TOML config file + JSON request/response bodies.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP server for the OpenAI-compatible API. Pin minor versions; both are
# 0.x and follow strict semver, so a wildcard would break us.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# HuggingFace tokenizer. Optional via `tokenizer` feature so users without
# the model files can still build / test.
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }

# Prometheus metrics export.
prometheus = { version = "0.13", default-features = false }

# Sync primitive for the LRU + buffer pool. parking_lot is faster and not async,
# which is exactly what we want around a short critical section.
parking_lot = "0.12"
once_cell = "1"

# Persistent, work-stealing thread pool for the architecture-agnostic
# dense-compute kernels (`matmul_row_major`, per-expert `gate_up_swiglu`
# / `down_proj`). These run on every token of every supported family
# (Mixtral, Qwen3-MoE, DeepSeek-V3/MLA, GPT-OSS, MiMo, dense Mistral /
# Phi). The previous implementation fanned each call out across cores
# with `std::thread::scope`, which *spawns and joins fresh OS threads on
# every matmul* — hundreds of times per token — and, under continuous
# batching, oversubscribed the machine by `concurrent_requests × cores`
# threads. `rayon`'s process-wide pool is created once and shared, so the
# per-call cost collapses to a fork-join on resident workers and
# concurrent requests share one bounded pool instead of each spawning
# their own. See `crate::parallel`.
rayon = "1"

# Lock-free, RCU-style atomic Arc swap. Used for the live-reloadable
# runtime configuration so Tokio worker threads can read sampling
# parameters / max-tokens caps on the hot token-evaluation path with
# zero lock contention — `ArcSwap::load()` is a single relaxed atomic
# load. See `crate::config::RuntimeConfig`.
arc-swap = "1.7"

# CLI and structured logging.
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Mocked router needs a weighted distribution.
rand = "0.8"

# O_DIRECT, posix_memalign, fadvise.
libc = "0.2"

# Histogram for percentile latency reporting.
hdrhistogram = "7.5"

# Lock-free concurrent hash map for the per-request KV-cache session
# store (Phase 9). Using `dashmap` instead of `parking_lot::RwLock<HashMap>`
# keeps the steady-state path lock-free for reads, which matters when
# many concurrent HTTP requests share the same store.
dashmap = "5.5"

# Safetensors loader for HuggingFace dense weights. Auto-detected by
# `RealModel::from_dir` and used in preference to per-tensor `.bin`
# files when present.
safetensors = "0.4"

# Tuned dense matvec backend. We use `matrixmultiply` rather than
# `cblas-sys` + `blas-src` because it:
#   * is pure Rust — no `system OpenBLAS` install required, so CI and
#     `cargo test` keep working out of the box;
#   * provides the same hand-tuned-microkernel SGEMM/SGEMV used by
#     `ndarray` for its `dot` op (the canonical BLAS-shaped path in the
#     Rust ecosystem);
#   * lets a follow-up PR drop in `cblas-sys` behind the same feature
#     gate without touching call sites in `transformer.rs`.
matrixmultiply = "0.3"

# fp16 (half-precision) weight support for SSD-streamed experts. Halving the
# bytes-per-parameter halves every SSD read, which is the single highest-
# leverage energy reduction in this engine.
half = { version = "2", features = ["bytemuck"] }
# Deliberately pinned at 0.20: the 0.20 → 0.21+ migration includes breaking
# changes to `BufferDescriptor` / `ComputePassDescriptor` (among others).
# Moving to a newer wgpu — e.g. for Vulkan subgroup-operation support to
# speed up the GPU matmul — will require a dedicated API migration pass
# across `src/backend/mod.rs`; do not bump this casually.
# Keep Vulkan support explicit for host feature resolution. Linux target
# dependencies also enable wgpu's Vulkan HAL, but `run --gpu` expects Vulkan
# adapters to be available whenever the platform exposes them.
wgpu = { version = "0.20", features = ["wgsl", "vulkan-portability"] }
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"

# io_uring with registered fixed buffers (Linux-only, behind `io_uring`
# cargo feature). The default build does not require this crate.
io-uring = { version = "0.6", optional = true }

# Hugging Face Candle tensor library — used as the industrial-grade math
# backend for the per-expert SwiGLU forward pass. We pull in only the
# core crate (no `candle-nn`, no GPU backends): the expert weights still
# arrive page-aligned out of NVMe via our O_DIRECT pipeline and are
# bridged into `Tensor`s in `inference.rs`. `default-features = false`
# keeps the dependency lean (CPU only, no Accelerate / MKL / CUDA).
candle-core = { version = "0.10", default-features = false }

# Native terminal dashboard — Phase 4 of the three-tier hierarchy. The
# `mer-cli monitor` subcommand uses these to render a live, polling
# overview of the SSD → RAM → VRAM hit grid, hit rates, VRAM
# utilisation, and I/O reactor pulse. Behind the `tui` cargo feature
# (on by default; turn off via `--no-default-features` for embedded
# builds).
ratatui = { version = "0.28", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }

# gRPC transport for distributed expert sharding (behind the off-by-
# default `grpc` cargo feature). `tonic` + `prost` pull in ~150 extra
# crates and slow the build, so they stay optional: the default
# single-node build, the hand-rolled wire frames in `src/rpc.rs`, and
# the `RpcShardRouter` skeleton all compile without them. The generated
# service stubs are committed at `src/grpc_gen.rs`, so no build-time
# `protoc` is required.
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[dev-dependencies]
# Property-based testing harness (gist Task 2 — "Add proptest for kernel
# dispatch + AlignedKvCache + AlignedBuffer"). Pinned to the 1.x line so
# the strategies API in our `tests` modules stays compatible without a
# transitive bump.
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[features]
default = ["tui"]
# Real HuggingFace tokenizer support. Off by default because the
# `tokenizers` crate pulls in `onig` (C library) which slows the build
# noticeably; the engine exposes a byte-level fallback tokenizer when
# this feature is disabled.
tokenizer = ["dep:tokenizers"]
# Linux-only io_uring backend with registered fixed buffers. Off by default
# because it requires the `io-uring` crate and only builds on Linux.
io_uring = ["dep:io-uring"]
# Row-parallel matmul. **Deprecated / no-op as of gist Task 1
# ("Hardware-Agnostic Auto-Escalation"):** the runtime row-parallel
# dispatch in `matmul_row_major` / `gate_up_swiglu` / `down_proj` is
# now always compiled, so a single binary auto-escalates on any host
# with enough cores. The feature is retained as a no-op for backwards
# compatibility with downstream build scripts that still pass
# `--features simd`; new builds should omit it.
simd = []

# BLAS-equivalent dense matmul. Retained as a compatibility feature and
# as the `auto` default selector for deployments that already opted into
# the old matrixmultiply path. The matrixmultiply crate is now compiled
# unconditionally so `[real_transformer].dense_matvec_backend` can select
# between serial matrixmultiply, Rayon row-parallel dot products, and
# Rayon-chunked matrixmultiply at runtime inside one binary.
blas = []
# Build the AVX-512 dispatcher in `kernels/avx512.rs`. Stable on
# x86_64; the actual code is `#[target_feature]`-gated and only
# executed when the runtime probe in `kernels::detect()` confirms the
# CPU supports AVX-512F + AVX-512BW. Off by default to keep portable
# builds buildable on toolchains pinned to a non-AVX-512 baseline.
avx512 = []
# Build the AMX skeleton in `kernels/amx.rs`. AMX intrinsics are
# nightly-only as of Rust 1.84, so this feature today builds in the
# runtime detector + tile-hint plumbing but the executor still falls
# through to AVX-512 / scalar. A follow-up PR (or a nightly build)
# can drop a real tile-based body in without touching call sites.
amx = []
# Nightly-only: unlocks the real Intel AMX tile intrinsics
# (`_tile_loadd`, `_tile_dpbssd`, `_tile_stored`, …) via Rust's
# unstable `stdarch_x86_amx` feature gate. Implies `amx` so the
# skeleton, runtime probe, and dispatcher are all compiled in; on top
# of that, this feature adds the crate-root
# `#![feature(stdarch_x86_amx)]` attribute and switches the runtime
# probe to `is_x86_feature_detected!("amx-tile")` so the AMX path can
# actually be entered. When this feature is *not* enabled (or when the
# runtime probe fails on the host), the dispatcher transparently falls
# back to the AVX-512 kernel. Requires a nightly toolchain.
nightly-amx = ["amx"]
# **Budget-GPU offload** (gist Part 2, fix #5). **Deprecated / no-op:**
# the `wgpu` dependency and the `GpuBackend` dense-compute path in
# `backend/mod.rs` are now compiled unconditionally, and nothing is
# gated behind `cfg(feature = "gpu")`, so this flag changes nothing.
# It is retained only for backwards compatibility with build scripts
# that still pass `--features gpu`; new builds should omit it. The GPU
# compute plane is selected at runtime via
# `[real_transformer].compute_offload = "gpu"`, which installs the
# `wgpu`-backed `GpuBackend` and falls back to the CPU `CandleBackend`
# when no device can be acquired.
gpu = []
# CUDA compute plane (Phase 3, three-tier hierarchy). When enabled,
# `inference::run_inference_gpu` performs the per-expert SwiGLU forward
# through candle-core's CUDA backend; the engine still falls back
# gracefully to the CPU path at runtime when no device is present.
# Pulls in `candle-core/cuda` and therefore requires a working CUDA
# toolkit on the build host — off by default to keep the standard
# CPU-only build buildable.
cuda = ["candle-core/cuda"]
# Native terminal dashboard (Phase 4). Enables the `mer-cli monitor`
# subcommand backed by ratatui + crossterm. On by default because the
# extra deps are pure-Rust and small; can be turned off with
# `--no-default-features` for the minimal embedded build.
tui = ["dep:ratatui", "dep:crossterm"]

# Distributed expert sharding over gRPC (tonic). Off by default: the
# single-node build, the `RpcShardRouter` skeleton, and the hand-rolled
# wire frames in `src/rpc.rs` all compile without `tonic`/`prost`. When
# enabled, `src/grpc.rs` provides a real `ExpertShard` gRPC server +
# client (using the committed `src/grpc_gen.rs` stubs — no build-time
# `protoc`), and `RpcShardRouter::fetch_remote` performs a real gRPC
# reachability probe against the owning shard instead of returning the
# skeleton stub.
grpc = ["dep:tonic", "dep:prost"]

# --------------------------------------------------------------------
# Vendored, patched `candle-kernels`.
#
# Building with `--features cuda` pulls in `candle-core/cuda` ->
# `candle-kernels`, whose CUDA `.cu` files are compiled by nvcc via the
# `cudaforge` crate. On Debian 13 (glibc 2.41) + CUDA 12.4 that build
# fails because glibc 2.41 redeclares the C23 `sinpi`/`cospi`/`sinpif`/
# `cospif` functions with an exception specification that conflicts with
# CUDA's `crt/math_functions.h`:
#
#     exception specification is incompatible with that of previous
#     function "cospi"
#
# cudaforge ignores `NVCC_PREPEND_FLAGS`, so the only way to inject the
# fix is through its `KernelBuilder::arg()` API. The vendored copy patches
# `build.rs` to force-include `cuda/glibc_cuda_compat.h` (via `-include`),
# which masks the conflicting glibc declarations before <math.h> pulls
# them in. The header is guarded by `__GLIBC_PREREQ(2, 41)`, so the patch
# is a strict no-op on older glibc, macOS and Windows. The only delta from
# the upstream v0.10.2 crate is the `-include` wiring in `build.rs`.
[patch.crates-io]
candle-kernels = { path = "vendor/candle-kernels" }
